Fix spacing in contact page

--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -4,7 +4,6 @@
   width: 350px;
   border-radius: 8px;
   margin-top: 50px;
-  margin-left: 80px;
   margin-bottom: 50px;
   background-color: white;
   place-items: center;
